--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -28,6 +28,17 @@
     box-shadow: inset 0px -3px 3px rgba(grey, $alpha: 0.2);
 }
 
+.dlCv {
+    position: absolute;
+    top: 15vh;
+    right: 10%;
+    text-align: right;
+}
+
+.imgDlCv {
+    width: 30%;
+}
+
 /*************************************************************************** JS *********************************************************************/
 .animation {
     position: absolute;
@@ -57,11 +68,11 @@
 
 .menuResp {
     position: absolute;
-    top: 10%;
+    top: 10vh;
     left: -100%;
     width: 100%;
-    height: 90%;
-    background-image: url('../img/bgColor.png');
+    height: 90vh;
+    background-color: whitesmoke;
     transition: ease-out 0.8s;
     z-index: 10;
 }
@@ -91,6 +102,11 @@
     overflow: hidden;
 }
 
+.burger {
+    position: relative;
+    z-index: 2000;
+}
+
 
 
 /*************************************************************************** template sections *********************************************************************/
@@ -111,17 +127,11 @@
 }
 
 .bgColor {
-    background-image: url('../img/bgColor.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    background-color: rgba($color: grey, $alpha: .1);
 }
 
 .bgColor2 {
-    background-image: url('../img/bgColor2.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    background-color: white;
 }
 
 .subTitle {
@@ -188,6 +198,15 @@
 
 .where {
     background-color: rgba($color: $color1, $alpha: 0.3)!important;
+}
+
+.mentionsLegales {
+    margin: 10% 0;
+}
+
+.mentionsLegales h2,
+.mentionsLegales h3 {
+    margin: 2% 0;
 }
 
 /*************************************************************************** Section Portfolio *********************************************************************/
