--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -32,11 +32,7 @@
     position: absolute;
     top: 15vh;
     right: 10%;
-    text-align: right;
-}
-
-.imgDlCv {
-    width: 30%;
+    width: 20%;
 }
 
 /*************************************************************************** JS *********************************************************************/
@@ -127,7 +123,7 @@
 }
 
 .bgColor {
-    background-color: rgba($color: grey, $alpha: .1);
+    background-color: rgba($color: whitesmoke, $alpha: .3);
 }
 
 .bgColor2 {
