--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -65,18 +65,58 @@
 .menuResp {
     position: absolute;
     top: 10vh;
-    left: -100%;
-    width: 100%;
+    left: -60%;
+    width: 60%;
     height: 90vh;
-    background-color: whitesmoke;
+    background-color:white;
     transition: ease-out 0.8s;
     z-index: 10;
 }
 
+.menuRespOut {
+    position: absolute;
+    top: 10vh;
+    left: -100%;
+    width: 100%;
+    height: 90vh;
+    background-color: rgba($color: black, $alpha: .5);
+    transition: ease-in 1s;
+    z-index: 9;
+}
+
+.reveal {
+    opacity: 0;
+    transform: translateX(-20px);
+    transition: 1s ease-in;
+}
+
+.revealTwo {
+    opacity: 0;
+    transform: translateX(20px);
+    transition: 1s ease-in;
+}
+
+.reveal-visible {
+    opacity: 1;
+    transform: translateX(0);
+    transition: 1s ease-out;
+}
+
+.menuRespOut.active {
+    left: 0%;
+    transition: ease-in 1.2s;
+}
+
+.menuResp ul {
+    margin: 20% 0;
+    margin-left: 10%;
+}
+
 .menuResp ul li {
-    font-size: 2rem;
-    margin: 5% 0;
+    font-size: 1rem;
+    margin: 10% 0;
     margin-left: 5%;
+    text-transform: uppercase;
 }
 
 .menuResp ul li a {
@@ -103,6 +143,9 @@
     z-index: 2000;
 }
 
+.contactMe {
+    margin: 10% 0;
+}
 
 
 /*************************************************************************** template sections *********************************************************************/
@@ -123,7 +166,7 @@
 }
 
 .bgColor {
-    background-color: rgba($color: whitesmoke, $alpha: .3);
+    background-color: rgba($color: $color2, $alpha: .1);
 }
 
 .bgColor2 {
