--- a/styles/_object.scss
+++ b/styles/_object.scss
@@ -56,6 +56,11 @@ h3 {
   justify-content: space-between;
 }
 
+.displayFlexAround {
+  display: flex;
+  justify-content: space-around;
+}
+
 .container {
   width: 80%;
 }
