--- a/styles/style.css
+++ b/styles/style.css
@@ -53,6 +53,11 @@ h3 {
   justify-content: space-between;
 }
 
+.displayFlexAround {
+  display: flex;
+  justify-content: space-around;
+}
+
 .container {
   width: 80%;
 }
@@ -151,18 +156,58 @@ h3 {
 .menuResp {
   position: absolute;
   top: 10vh;
-  left: -100%;
-  width: 100%;
+  left: -60%;
+  width: 60%;
   height: 90vh;
-  background-color: whitesmoke;
+  background-color: white;
   transition: ease-out 0.8s;
   z-index: 10;
 }
 
+.menuRespOut {
+  position: absolute;
+  top: 10vh;
+  left: -100%;
+  width: 100%;
+  height: 90vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: ease-in 1s;
+  z-index: 9;
+}
+
+.reveal {
+  opacity: 0;
+  transform: translateX(-20px);
+  transition: 1s ease-in;
+}
+
+.revealTwo {
+  opacity: 0;
+  transform: translateX(20px);
+  transition: 1s ease-in;
+}
+
+.reveal-visible {
+  opacity: 1;
+  transform: translateX(0);
+  transition: 1s ease-out;
+}
+
+.menuRespOut.active {
+  left: 0%;
+  transition: ease-in 1.2s;
+}
+
+.menuResp ul {
+  margin: 20% 0;
+  margin-left: 10%;
+}
+
 .menuResp ul li {
-  font-size: 2rem;
-  margin: 5% 0;
+  font-size: 1rem;
+  margin: 10% 0;
   margin-left: 5%;
+  text-transform: uppercase;
 }
 
 .menuResp ul li a {
@@ -189,6 +234,10 @@ h3 {
   z-index: 2000;
 }
 
+.contactMe {
+  margin: 10% 0;
+}
+
 /*************************************************************************** template sections *********************************************************************/
 .indexTitles {
   text-align: center;
@@ -207,7 +256,7 @@ h3 {
 }
 
 .bgColor {
-  background-color: rgba(245, 245, 245, 0.3);
+  background-color: rgba(149, 198, 235, 0.1);
 }
 
 .bgColor2 {
@@ -453,6 +502,10 @@ h3 {
   .autoText {
     font-size: 8rem;
   }
+
+  .menuRespOut {
+    display: none;
+  }
 }
 @media only screen and (min-width: 1280px) and (max-width: 1919px) {
   /* For desktop: */
@@ -509,6 +562,10 @@ h3 {
   }
 
   .menuResp {
+    display: none;
+  }
+
+  .menuRespOut {
     display: none;
   }
 }
@@ -584,6 +641,10 @@ h3 {
 
   .dlCv {
     right: 5%;
+  }
+
+  .menuRespOut {
+    display: none;
   }
 }
 @media only screen and (min-width: 750px) and (max-width: 979px) {
@@ -681,6 +742,10 @@ h3 {
   .dlCv {
     top: 15vh;
     width: 40%;
+  }
+
+  .menuRespOut {
+    display: none;
   }
 }
 @media only screen and (min-width: 520px) and (max-width: 749px) {
@@ -803,6 +868,28 @@ h3 {
     top: 15vh;
     width: 40%;
   }
+
+  .menuResp ul li {
+    font-size: 2rem;
+  }
+
+  .reveal {
+    opacity: 0;
+    transform: translateY(40px);
+    transition: 1s ease-in;
+  }
+
+  .revealTwo {
+    opacity: 0;
+    transform: translateY(40px);
+    transition: 1s ease-in;
+  }
+
+  .reveal-visible {
+    opacity: 1;
+    transform: translateY(0);
+    transition: 1s ease-out;
+  }
 }
 @media only screen and (min-width: 260px) and (max-width: 519px) {
   /* For mobile: */
@@ -923,6 +1010,24 @@ h3 {
   .dlCv {
     top: 15vh;
     width: 50%;
+  }
+
+  .reveal {
+    opacity: 0;
+    transform: translateY(40px);
+    transition: 1s ease-in;
+  }
+
+  .revealTwo {
+    opacity: 0;
+    transform: translateY(40px);
+    transition: 1s ease-in;
+  }
+
+  .reveal-visible {
+    opacity: 1;
+    transform: translateY(0);
+    transition: 1s ease-out;
   }
 }
 @media (orientation: landscape) and (min-width: 750px) and (max-width: 979px) {
